projects/vb6parse/snapshots/tests/library/resources/loadpicture/loadpicture_do_while.snap
---
source: projects/vb6parse/tests/library/resources/loadpicture.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: Whitespace
      text: "            "
    - kind: DoStatement
      children:
        - kind: DoKeyword
          text: Do
        - kind: Whitespace
          text: " "
        - kind: WhileKeyword
          text: While
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: hasMore
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: SetStatement
              children:
                - kind: Whitespace
                  text: "                "
                - kind: SetKeyword
                  text: Set
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: currentPic
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: LoadPicture
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: CallExpression
                              children:
                                - kind: Identifier
                                  text: GetNextFile
                                - kind: LeftParenthesis
                                  text: (
                                - kind: ArgumentList
                                  children: []
                                - kind: RightParenthesis
                                  text: )
                    - kind: RightParenthesis
                      text: )
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "                "
            - kind: CallStatement
              children:
                - kind: Identifier
                  text: ProcessPicture
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: currentPic
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "            "
        - kind: LoopKeyword
          text: Loop
        - kind: Newline
          text: "\n"
    - kind: Whitespace
      text: "        "
